# taskman

./: Cargo.toml  README.md  install.sh  setup_sequence.py
src/: comparible_task.rs  db.rs  main.rs  show_rule.rs  task.rs
