[package]
name = "taskman"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = {version = "4.5.4", features = ["cargo"]}
colored = "2.1.0"
csv = "1.3.0"
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
