[package]
name = "taskman"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
csv = "1.3.0"
dirs = "5.0.1"
fs2 = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
tabled = "0.15.0"
